Formateo del las etiquetas de HTML

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="icons/css/boxicons.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -95,7 +95,7 @@
                 stroke-width="1.5"
               />
             </svg>
-            <span>5</span>
+            <span>3</span>
           </a>
           <a href="pages/login.html" class="link__login">Inicia sesión</a>
           <button class="button-hamburger" id="button-hamburger">
@@ -109,10 +109,29 @@
         <!-- SECTION CAROUSEL -->
         <section class="contenedor-carousel scroll-reveal">
           <button id="prevBtn">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
-              <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" />
-              <path d="M13.5 16C13.5 16 10.5 13.054 10.5 12C10.5 10.9459 13.5 8 13.5 8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="24"
+              height="24"
+              color="#000000"
+              fill="none"
+            >
+              <circle
+                cx="12"
+                cy="12"
+                r="10"
+                stroke="currentColor"
+                stroke-width="1.5"
+              />
+              <path
+                d="M13.5 16C13.5 16 10.5 13.054 10.5 12C10.5 10.9459 13.5 8 13.5 8"
+                stroke="currentColor"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
           </button>
           <div class="carousel-container">
             <div
@@ -168,20 +187,43 @@
             </div>
           </div>
           <button id="nextBtn">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
-              <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" />
-              <path d="M10.5 8C10.5 8 13.5 10.946 13.5 12C13.5 13.0541 10.5 16 10.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="24"
+              height="24"
+              color="#000000"
+              fill="none"
+            >
+              <circle
+                cx="12"
+                cy="12"
+                r="10"
+                stroke="currentColor"
+                stroke-width="1.5"
+              />
+              <path
+                d="M10.5 8C10.5 8 13.5 10.946 13.5 12C13.5 13.0541 10.5 16 10.5 16"
+                stroke="currentColor"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
           </button>
         </section>
         <!-- END SECTION CAROUSEL -->
 
         <!-- SECTION CATEGORIAS -->
         <section class="contenedor-categorias scroll-reveal">
-          <a href="#" class="categorias__hombre scroll-reveal"><p>Hombres</p></a>
+          <a href="#" class="categorias__hombre scroll-reveal"
+            ><p>Hombres</p></a
+          >
           <a href="#" class="categorias__mujer scroll-reveal"><p>Mujeres</p></a>
           <a href="#" class="categorias__niños scroll-reveal"><p>Niños</p></a>
-          <a href="#" class="categorias__acesorios scroll-reveal"><p>Accesorios</p></a>
+          <a href="#" class="categorias__acesorios scroll-reveal"
+            ><p>Accesorios</p></a
+          >
         </section>
         <!-- END SECTION CATEGORIAS -->
 
@@ -1402,17 +1444,17 @@
               <label for="lenguaje">Lenguaje:</label>
               <select name="lenguaje" id="lenguaje">
                 <option value="es">Español</option>
-                <option value="en">Inglés</json>
+                <option value="en">Inglés</option>
               </select>
             </div>
           </div>
           <div class="footer__copy scroll-reveal">
             <p>&copy; 2024 Willian Arevalo.</p>
             <div class="footer__copy-links">
-                <a href="">Terminos</a>
-                <a href="">Privacidad</a>
-                <a href="">Cookies</a>
-                <a href="">Copyright</a>
+              <a href="">Terminos</a>
+              <a href="">Privacidad</a>
+              <a href="">Cookies</a>
+              <a href="">Copyright</a>
             </div>
           </div>
         </div>
@@ -1424,6 +1466,6 @@
     <script src="js/script.js"></script>
     <script src="js/carousel.js"></script>
     <script src="js/select.js"></script>
-    <script src="js/scrollreveal.js"></script>    
+    <script src="js/scrollreveal.js"></script>
   </body>
 </html>
