Se incorporo el codigo responsive de la pagina de payment.html

--- a/pages/payment.html
+++ b/pages/payment.html
@@ -176,7 +176,7 @@
                   />
                 </div>
               </div>
-              <div class="form-payment__group">
+              <div class="form-payment__group inputs-2">
                 <div class="form-payment__group-input flex-2">
                   <div class="form-payment__icon">
                     <svg
@@ -523,7 +523,7 @@
                       />
                     </div>
                   </div>
-                  <div class="form-pago__group">
+                  <div class="form-pago__group inputs-2">
                     <div class="form-pago__group-input">
                       <div class="form-pago__icon">
                         <svg
