Se agrego el scroll-reveal al footer de la pagina de payment.html

--- a/pages/payment.html
+++ b/pages/payment.html
@@ -695,9 +695,9 @@
       </div>
     </main>
     <footer>
-      <div class="contenedor-footer">
-        <div class="footer__col-1">
-          <div class="footer__contacto">
+      <div class="contenedor-footer scroll-reveal">
+        <div class="footer__col-1 scroll-reveal">
+          <div class="footer__contacto scroll-reveal">
             <h3>Contacto</h3>
             <p>
               <svg
@@ -743,7 +743,7 @@
             </p>
             <a href="">Contactanos</a>
           </div>
-          <div class="footer__info">
+          <div class="footer__info scroll-reveal">
             <div class="footer__info-links">
               <a href="#">Inicio</a>
               <a href="#">Hombres</a>
@@ -752,7 +752,7 @@
               <a href="#">Ofertas</a>
             </div>
           </div>
-          <div class="footer__help">
+          <div class="footer__help scroll-reveal">
             <div class="footer__help-title">
               <h3>Ayuda</h3>
             </div>
@@ -764,10 +764,10 @@
             </div>
           </div>
         </div>
-        <div class="footer__col-2">
-          <div class="footer__social">
-            <div class="footer__social-redes">
-              <a href="#">
+        <div class="footer__col-2 scroll-reveal">
+          <div class="footer__social scroll-reveal">
+            <div class="footer__social-redes scroll-reveal">
+              <a href="#" class="scroll-reveal">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -790,7 +790,7 @@
                   />
                 </svg>
               </a>
-              <a href="#">
+              <a href="#" class="scroll-reveal">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -818,7 +818,7 @@
                   />
                 </svg>
               </a>
-              <a href="#">
+              <a href="#" class="scroll-reveal">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -835,7 +835,7 @@
                   />
                 </svg>
               </a>
-              <a href="#">
+              <a href="#" class="scroll-reveal">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -857,7 +857,7 @@
                 </svg>
               </a>
             </div>
-            <div class="footer__social-lenguaje">
+            <div class="footer__social-lenguaje scroll-reveal">
               <label for="lenguaje">Lenguaje:</label>
               <select name="lenguaje" id="lenguaje">
                 <option value="es">Español</option>
@@ -865,7 +865,7 @@
               </select>
             </div>
           </div>
-          <div class="footer__copy">
+          <div class="footer__copy scroll-reveal">
             <p>&copy; 2024 Willian Arevalo.</p>
             <div class="footer__copy-links">
               <a href="">Terminos</a>
